kubernetes/ui-service.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: service 
spec: 
  type: NodePort 
  ports: 
   - protocol: TCP 
     nodePort: 30002 
     port: 3000 
     targetPort: 80 
  selector: 
    app: inventory-ui
