kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
spec:
  rules:
    - host: product-inv.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory-ui-clusterip
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: inventory-api-clusterip
                port:
                  number: 8090
